Fix overflowing tooltip

--- a/packages/codemirror-workspace/css/default.css
+++ b/packages/codemirror-workspace/css/default.css
@@ -137,13 +137,13 @@
   padding: 2px;
   z-index: 10;
   position: absolute;
-  max-width: 50ch;
-  max-height: 120px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 .cmw-tooltip > div {
-  overflow-y: auto;
+  overflow: auto;
+  max-width: 50ch;
+  max-height: 120px;
 }
 .cmw-tooltip .cmw-tooltip-close {
   position: absolute;
